<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/GuardSuperIDLabel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/GuardSuperIDId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:hint=" Enter Guard Super ID here"
                    android:background="@drawable/rounded"
                    android:inputType="text"
                    android:textSize="24dp"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:visibility="invisible" />


                <Button
                    android:id="@+id/LoginBtnId"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/LoginBtn"
                    android:background="@drawable/rounded_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/BackToMainBtnId"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/BackToMainBtn"
                    android:background="@drawable/rounded_button"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ProgressBar>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>