<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/labelTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:textSize="20dp"
                    android:text="@string/ticketLabel2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/VisitorTicketId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="14"
                    android:background="@drawable/rounded"
                    android:hint=" Enter saved ticket number here"
                    android:inputType="number"
                    android:textSize="24dp"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/StatusLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:textSize="20dp"
                    android:text="@string/StatusLabel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/VisitorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textSize="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/VisitorStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textSize="24dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/StatusReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textSize="24dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/CheckStatusBtnId"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:onClick="checkStatus"
                    android:text="@string/CheckStatusBtn"
                    android:background="@drawable/rounded_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/BackToMainBtnId"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/BackToMainBtn"
                    android:background="@drawable/rounded_button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:visibility="invisible" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ProgressBar>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>